// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaIndicator should render audio indicator correctly 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
  dir="ltr"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 AudioMediaIcon-sc-10lpekz-2 jqcLqP"
      focusable="false"
      height="12px"
      viewBox="0 0 13 12"
      width="13px"
    >
      <path
        d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
      />
      <path
        d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
      />
    </svg>
  </div>
</div>
`;

exports[`MediaIndicator should render photogallery correctly 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
  dir="ltr"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 PhotoMediaIcon-sc-10lpekz-3 eqyZnv"
      focusable="false"
      height="13px"
      viewBox="0 0 32 26"
      width="16px"
    >
      <path
        d="M9,2V0H4V2H0V26H32V2ZM6.5,10A2.5,2.5,0,1,1,9,7.52,2.5,2.5,0,0,1,6.5,10ZM20,23a9,9,0,1,1,9-9A9,9,0,0,1,20,23Z"
      />
      <circle
        cx="20"
        cy="14.02"
        r="5.5"
      />
    </svg>
  </div>
</div>
`;

exports[`MediaIndicator should render video by default 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 dAhsvX"
  dir="ltr"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
      focusable="false"
      height="12px"
      viewBox="0 0 32 32"
      width="12px"
    >
      <polygon
        points="3,32 29,16 3,0"
      />
    </svg>
  </div>
</div>
`;

exports[`MediaIndicator should render video indicator correctly 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 bMHUOq"
  dir="ltr"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
      focusable="false"
      height="12px"
      viewBox="0 0 32 32"
      width="12px"
    >
      <polygon
        points="3,32 29,16 3,0"
      />
    </svg>
  </div>
</div>
`;

exports[`MediaIndicator should render video indicator correctly when inline 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 fIPcWg"
  dir="ltr"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
      focusable="false"
      height="12px"
      viewBox="0 0 32 32"
      width="12px"
    >
      <polygon
        points="3,32 29,16 3,0"
      />
    </svg>
  </div>
</div>
`;

exports[`MediaIndicator should render video indicator correctly when inline on RTL 1`] = `
<div
  aria-hidden="true"
  class="StyledMediaIndicator-sc-1p6h86b-0 eDoiLK"
  dir="rtl"
>
  <div
    class="FlexWrapper-sc-1p6h86b-1 fQsOMp"
  >
    <svg
      aria-hidden="true"
      class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
      focusable="false"
      height="12px"
      viewBox="0 0 32 32"
      width="12px"
    >
      <polygon
        points="3,32 29,16 3,0"
      />
    </svg>
  </div>
</div>
`;
